tests/assembler/fail/duplicate_macro.tal
%macro { #12 }
%macro { #34 }
|0100
    macro
